<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.13</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.snhu</groupId>
	<artifactId>ssl-server</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ssl-server</name>
	<description>ssl-server skeleton for CS-305</description>

	<properties>
		<java.version>17</java.version>
		<tomcat.version>10.1.47</tomcat.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
				</configuration>
			</plugin>
			<plugin>
      			<groupId>org.apache.maven.plugins</groupId>
      			<artifactId>maven-compiler-plugin</artifactId>
      			<configuration>
        			<release>17</release>
      			</configuration>
    		</plugin>
			<plugin>
            	<groupId>org.owasp</groupId>
            	<artifactId>dependency-check-maven</artifactId>
            	<version>12.2.0</version>
				<configuration>
					<suppressionFiles>
						<suppressionFile>suppression.xml</suppressionFile>
					</suppressionFiles>
				</configuration>
            	<executions>
                  <execution>
                      <goals>
                          <goal>check</goal>
                      </goals>
                  </execution>
              </executions>
            </plugin>
		</plugins>
	</build>

</project>
